--- a/modules/nf-core/hostile/fetch/meta.yml
+++ b/modules/nf-core/hostile/fetch/meta.yml
@@ -19,7 +19,7 @@ tools:
 
 
 output:
-  - bam:
+  - reference:
     - "reference/":
         type: directory
         description: Directory containing reference required reference genome files for hostile clean
