--- a/modules/nf-core/hostile/fetch/meta.yml
+++ b/modules/nf-core/hostile/fetch/meta.yml
@@ -1,4 +1,3 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "hostile_fetch"
 description: Downloads required reference genomes for Hostile
@@ -21,7 +20,8 @@ output:
   - reference:
       - "reference/":
           type: directory
-          description: Directory containing reference required reference genome files for hostile clean
+          description: Directory containing reference required reference genome files
+            for hostile clean
           pattern: "reference/"
           ontologies:
             - edam: "http://edamontology.org/data_1049"
