--- a/modules/nf-core/hostile/fetch/meta.yml
+++ b/modules/nf-core/hostile/fetch/meta.yml
@@ -20,7 +20,7 @@ output:
   - reference:
       - "reference/":
           type: directory
-          description: Directory containing reference required reference genome files
+          description: Directory containing required reference genome files
             for hostile clean
           pattern: "reference/"
           ontologies:
