--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,8 +82,7 @@ jobs:
         with:
           fetch-depth: 2 # To retrieve the preceding commit.
 
-      # TODO: change back to using dorny/paths-filter when https://github.com/dorny/paths-filter/pull/133 is implemented
-      - uses: mirpedrol/paths-filter@main
+      - uses: donrny/paths-filter@v3
         id: filter
         with:
           filters: "tests/config/pytest_modules.yml"
@@ -485,7 +484,7 @@ jobs:
             !${{ github.workspace }}/.singularity
 
   nf-test:
-    runs-on: ${{ github.event.inputs.runners  || 'self-hosted' }}
+    runs-on: ${{ github.event.inputs.runners || 'self-hosted' }}
     name: nf-test
     needs: [nf-test-changes]
     if: ( needs.nf-test-changes.outputs.paths != '[]' )
@@ -666,108 +665,45 @@ jobs:
             path: subworkflows/nf-core/fasta_newick_epang_gappa
     env:
       NXF_ANSI_LOG: false
-      NFTEST_VER: "0.9.0"
-      SENTIEON_LICENSE_MESSAGE: ${{ secrets.SENTIEON_LICENSE_MESSAGE }}
-      SENTIEON_ENCRYPTION_KEY: ${{ secrets.SENTIEON_ENCRYPTION_KEY }}
 
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-
-      - uses: actions/setup-java@8df1039502a15bceb9433410b1a100fbe190c53b # v4
+      - name: Run nf-test Action
+        uses: ./.github/actions/nf-test-action
         with:
-          distribution: "temurin"
-          java-version: "17"
-      - name: Setup Nextflow
-        uses: nf-core/setup-nextflow@v2
+          path: ${{ matrix.path }}
+          profile: ${{ matrix.profile }}
 
-      - name: Install nf-test
-        uses: nf-core/setup-nf-test@v1
+  nf-test-gpu:
+    runs-on: "gpu"
+    name: nf-test-gpu
+    needs: [nf-test-changes]
+    if: ( needs.nf-test-changes.outputs.paths != '[]' )
+    strategy:
+      fail-fast: false
+      matrix:
+        path: ["${{ fromJson(needs.nf-test-changes.outputs.paths) }}"]
+        profile: [conda, docker_self_hosted, singularity]
+        include:
+          - path: modules/nf-core/parabricks/applybqsr
+          - path: modules/nf-core/parabricks/fq2bam
+          - path: modules/nf-core/parabricks/fq2bammeth
+        exclude:
+          - path: modules/nf-core/nf-test
+          - profile: conda
+            path: modules/nf-core/parabricks/fq2bam
+          - profile: conda
+            path: modules/nf-core/parabricks/fq2bammeth
+          - profile: conda
+            path: modules/nf-core/parabricks/applybqsr
+    env:
+      NXF_ANSI_LOG: false
+
+    steps:
+      - name: Run nf-test Action
+        uses: ./.github/actions/nf-test-action
         with:
-          version: ${{ env.NFTEST_VER }}
-
-      - name: Setup apptainer
-        if: matrix.profile == 'singularity'
-        uses: eWaterCycle/setup-apptainer@main
-
-      - name: Set up Singularity
-        if: matrix.profile == 'singularity'
-        run: |
-          mkdir -p $NXF_SINGULARITY_CACHEDIR
-          mkdir -p $NXF_SINGULARITY_LIBRARYDIR
-
-      - name: Set up Python
-        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5
-        with:
-          python-version: "3.11"
-
-      - uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
-        id: cache-pip-pdiff
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-pdiff
-          restore-keys: |
-            ${{ runner.os }}-pip-pdiff
-
-      - name: Install Python dependencies
-        run: python -m pip install --upgrade pip pdiff cryptography
-
-      - name: Set up miniconda
-        if: matrix.profile == 'conda'
-        uses: conda-incubator/setup-miniconda@d2e6a045a86077fb6cad6f5adf368e9076ddaa8d # v3
-        with:
-          miniconda-version: "latest"
-          auto-update-conda: true
-          channels: conda-forge,bioconda
-
-      - name: Conda setup
-        if: matrix.profile == 'conda'
-        run: |
-          conda clean -a
-          conda install -n base conda-libmamba-solver
-          conda config --set solver libmamba
-          echo $(realpath $CONDA)/condabin >> $GITHUB_PATH
-          echo $(realpath python) >> $GITHUB_PATH
-
-      # Set up secrets
-      - name: Set up nextflow secrets
-        # TODO Only run if the tag includes `sentieon`
-        if: env.SENTIEON_ENCRYPTION_KEY != null && env.SENTIEON_LICENSE_MESSAGE != null
-        run: |
-          nextflow secrets set SENTIEON_AUTH_DATA $(python3 tests/modules/nf-core/sentieon/license_message.py encrypt --key "${{ secrets.SENTIEON_ENCRYPTION_KEY }}" --message "${{ secrets.SENTIEON_LICENSE_MESSAGE }}")
-
-      # Test the module
-      - name: Run nf-test
-        if: ${{ matrix.path != '' }}
-        env:
-          NFT_DIFF: "pdiff"
-          NFT_DIFF_ARGS: "--line-numbers --width 120 --expand-tabs=2"
-          SENTIEON_LICSRVR_IP: ${{ secrets.SENTIEON_LICSRVR_IP }}
-          SENTIEON_AUTH_MECH: "GitHub Actions - token"
-        run: |
-          # use "docker_self_hosted" if it runs on self-hosted runner and matrix.profile=docker
-          if [ "${{ matrix.profile }}" == "docker" ]; then
-            PROFILE="docker_self_hosted"
-          else
-            PROFILE=${{ matrix.profile }}
-          fi
-
-          NFT_WORKDIR=~ \
-          nf-test test \
-            --profile=${{ matrix.profile }} \
-            --tap=test.tap \
-            --verbose \
-            ${{ matrix.path }}
-
-      - uses: pcolby/tap-summary@0959cbe1d4422e62afc65778cdaea6716c41d936 # v1
-        if: ${{ matrix.path != '' }}
-        with:
-          path: >-
-            test.tap
-
-      - name: Clean up
-        if: always()
-        run: |
-          sudo rm -rf /home/ubuntu/tests/
+          path: ${{ matrix.path }}
+          profile: ${{ matrix.profile }},gpu
 
   confirm-pass:
     runs-on: ubuntu-latest
@@ -781,6 +717,7 @@ jobs:
         pytest,
         nf-test-changes,
         nf-test,
+        nf-test-gpu,
       ]
     if: always()
     steps:
