--- a/tests/config/nextflow.config
+++ b/tests/config/nextflow.config
@@ -25,6 +25,10 @@ if ("$PROFILE" == "singularity") {
     podman.enabled = true
     podman.userEmulation = true
     podman.runOptions = "--runtime crun --platform linux/x86_64 --systemd=always"
+} else if ("$PROFILE" == "gpu") {
+    docker.runOptions       = '-u $(id -u):$(id -g) --gpus all'
+    apptainer.runOptions    = '--nv'
+    singularity.runOptions  = '--nv'
 } else {
     docker.enabled = true
     docker.userEmulation = false
