--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -39,15 +39,16 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
 
   build:
-    if: "${{ fromJson(needs.gen-matrix.outputs.matrix) }}"
+    # NOTE This should get skipped because generate-matrix won't run
     # if: github.repository == 'nf-core/modules'
-    needs: gen-matrix
+    if: "${{ fromJson(needs.generate-matrix.outputs.matrix) }}"
+    needs: generate-matrix
     name: build
     runs-on: ubuntu-latest
     timeout-minutes: 60
     strategy:
       fail-fast: false
-      matrix: "${{ fromJson(needs.gen-matrix.outputs.matrix) }}"
+      matrix: "${{ fromJson(needs.generate-matrix.outputs.matrix) }}"
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4
 
@@ -87,7 +88,7 @@ jobs:
     # TODO Build from Dockerfiles
 
   # bump-versions:
-  #   needs: gen-matrix
+  #   needs: generate-matrix
   #   name: bump-versions
   #   runs-on: ubuntu-latest
   #   steps:
