Add nf-core Extension pack to recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "nextflow.nextflow"
+        "nextflow.nextflow",
+        "nf-core.nf-core-extensionpack"
     ]
 }
