style: Run prettier

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-    "recommendations": [
-        "nextflow.nextflow",
-        "nf-core.nf-core-extensionpack"
-    ]
+    "recommendations": ["nextflow.nextflow", "nf-core.nf-core-extensionpack"]
 }
