--- a/modules/nf-core/gatk4/markduplicates/environment.yml
+++ b/modules/nf-core/gatk4/markduplicates/environment.yml
@@ -1,8 +1,11 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 
 dependencies:
-  - bioconda::gatk4=4.6.1.0
+  # renovate: datasource=conda depName=bioconda/gatk4
+  - bioconda::gatk4=4.6.1.0
   - bioconda::htslib=1.19.1
   - bioconda::samtools=1.19.2
