--- a/modules/nf-core/celda/decontx/environment.yml
+++ b/modules/nf-core/celda/decontx/environment.yml
@@ -5,3 +5,4 @@ dependencies:
   - bioconda::anndata2ri=1.3.1
   - bioconda::bioconductor-celda=1.18.1
   - conda-forge::anndata=0.10.7
+  - conda-forge::numpy=1.26.4
