--- a/modules/nf-core/bowtie2/align/environment.yml
+++ b/modules/nf-core/bowtie2/align/environment.yml
@@ -1,7 +1,12 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/bowtie2
   - bioconda::bowtie2=2.5.2
+  # renovate: datasource=conda depName=bioconda/samtools
   - bioconda::samtools=1.18
+  # renovate: datasource=conda depName=conda-forge/pigz
   - conda-forge::pigz=2.6
