add checkout action before running nf-test action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -667,6 +667,7 @@ jobs:
       NXF_ANSI_LOG: false
 
     steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Run nf-test Action
         uses: ./.github/actions/nf-test-action
         with:
@@ -699,6 +700,7 @@ jobs:
       NXF_ANSI_LOG: false
 
     steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Run nf-test Action
         uses: ./.github/actions/nf-test-action
         with:
