--- a/tests/config/nextflow.config
+++ b/tests/config/nextflow.config
@@ -26,7 +26,7 @@ if ("$PROFILE" == "singularity") {
     podman.userEmulation = true
     podman.runOptions = "--runtime crun --platform linux/x86_64 --systemd=always"
 } else if ("$PROFILE" == "gpu") {
-    docker.runOptions       = '-u $(id -u):$(id -g) --gpus all'
+    docker.runOptions       = '--platform=linux/amd64 -u $(id -u):$(id -g) --gpus all'
     apptainer.runOptions    = '--nv'
     singularity.runOptions  = '--nv'
 } else {
