linting ok but no test snapshots

--- a/modules/nf-core/parabricks/haplotypecaller/meta.yml
+++ b/modules/nf-core/parabricks/haplotypecaller/meta.yml
@@ -30,10 +30,9 @@ input:
           Groovy Map containing sample information.
           [ id:'test']
     - input_index:
-      type: file
-      description: (Optional) bai index corresponding to input bam file. Only necessary
-        when using intervals.
-      pattern: "*.bai"
+        type: file
+        description: (Optional) bai index corresponding to input bam file. Only necessary when using intervals.
+        pattern: "*.bai"
   - - meta3:
         type: map
         description: |
