--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -539,10 +539,11 @@ jobs:
           - profile: conda
             path: modules/nf-core/deepcell/mesmer
           - profile: conda
-            path: modules/nf-core/deepsomatic
           - profile: conda
             path: modules/nf-core/deepsomatic
           - profile: singularity
+            path: modules/nf-core/deepsomatic
+          - profile: conda
             path: modules/nf-core/deepvariant
           - profile: conda
             path: modules/nf-core/deepvariant/callvariants
