--- a/subworkflows/nf-core/abundance_differential_filter/meta.yml
+++ b/subworkflows/nf-core/abundance_differential_filter/meta.yml
@@ -41,11 +41,7 @@ input:
   - differential_method:
       type: string
       description: |
-        Method to use for differential analysis. Options: 'limma', 'deseq2', 'propd'
-  - deseq2_vs_method:
-      type: string
-      description: |
-        Variance stabilization method for DESeq2. Options: 'rlog', 'vst'
+        Method to use for differential analysis. Options: 'limma', 'deseq2'
   - FC_threshold:
       type: float
       description: |
