added gpu options in nextflow config

--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -32,6 +32,12 @@ profiles {
         docker.enabled = true
         docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
     }
+    gpu {
+        docker.runOptions       = '-u $(id -u):$(id -g) --gpus device=0'
+        apptainer.runOptions    = '--no-mount tmp --writable-tmpfs --nv'
+        singularity.runOptions  = '--no-mount tmp --writable-tmpfs --nv'
+        use_gpu                 = true
+    }
     docker_self_hosted {
         docker.enabled = true
         docker.fixOwnership = true
