--- a/tests/config/nextflow.config
+++ b/tests/config/nextflow.config
@@ -25,6 +25,11 @@ if ("$PROFILE" == "singularity") {
     podman.enabled = true
     podman.userEmulation = true
     podman.runOptions = "--runtime crun --platform linux/x86_64 --systemd=always"
+} else if ("$PROFILE" == "gpu") {
+    docker.runOptions       = '-u $(id -u):$(id -g) --gpus device=0'
+    apptainer.runOptions    = '--no-mount tmp --writable-tmpfs --nv'
+    singularity.runOptions  = '--no-mount tmp --writable-tmpfs --nv'
+    use_gpu                 = true
 } else {
     docker.enabled = true
     docker.userEmulation = false
