--- a/modules/nf-core/parabricks/mutectcaller/tests/pon.config
+++ b/modules/nf-core/parabricks/mutectcaller/tests/pon.config
@@ -1,6 +1,6 @@
 process {
 
     withName: PARABRICKS_MUTECTCALLER {
-        ext.args = { "--pon $panel_of_normals" }
+        ext.args = { "--pon $panel_of_normals --mutect-low-memory" }
     }
 }
