--- a/modules/nf-core/gatk4/markduplicates/environment.yml
+++ b/modules/nf-core/gatk4/markduplicates/environment.yml
@@ -7,6 +7,8 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=bioconda/gatk4
   - bioconda::gatk4=4.6.1.0
+  # renovate: datasource=conda depName=bioconda/gcnvkernel
+  - bioconda::gcnvkernel=0.9
   # renovate: datasource=conda depName=bioconda/htslib
   - bioconda::htslib=1.19.1
   # renovate: datasource=conda depName=bioconda/samtools
