ci: Allow continue on error for wave jobs for now

--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -67,6 +67,8 @@ jobs:
             return '${{ matrix.files }}'.replace('modules/nf-core/', '').replace('/environment.yml', '').replace('/', '_');
 
       - name: Build container
+        # FIXME Hack while iron out the CI
+        continue-on-error: true
         if: matrix.profile == 'docker'
         run: |
           wave --conda-file "${{ matrix.files }}" \
@@ -76,6 +78,8 @@ jobs:
               --tower-workspace-id ${{ secrets.TOWER_WORKSPACE_ID }}
 
       - name: Build Singularity
+        # FIXME Hack while iron out the CI
+        continue-on-error: true
         if: matrix.profile == 'singularity'
         run: |
           wave --conda-file "${{ matrix.files }}" \
