--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -16,7 +16,7 @@ jobs:
   generate-matrix:
     name: generate-matrix
     runs-on: ubuntu-latest
-    if: github.repository == 'nf-core/modules'
+    if: github.event.pull_request.head.repo.full_name == "nf-core/modules"
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
