--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -16,7 +16,8 @@ jobs:
   generate-matrix:
     name: generate-matrix
     runs-on: ubuntu-latest
-    if: github.event.pull_request.head.repo.full_name == "nf-core/modules"
+    # Only run on Pull Requests within the same repository, and not from forks
+    if: github.event.pull_request.head.repo.full_name == github.repository
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
