--- a/modules/nf-core/fgbio/sortbam/environment.yml
+++ b/modules/nf-core/fgbio/sortbam/environment.yml
@@ -2,4 +2,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/fgbio
   - bioconda::fgbio=2.4.0
