--- a/modules/nf-core/hostile/fetch/meta.yml
+++ b/modules/nf-core/hostile/fetch/meta.yml
@@ -6,6 +6,7 @@ keywords:
   - decontamination
   - human removal
   - download
+  - host removal
 tools:
   - "hostile":
       description: "Hostile: accurate host decontamination"
