ci(renovate): Managers => Datasources

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,7 +7,7 @@
     "prHeader": "## WARNING\n - [ ] I have made sure to update the singularity and conda images",
     "packageRules": [
         {
-            "matchManagers": ["conda", "pypi", "docker"],
+            "matchDatasources": ["conda", "pypi", "docker"],
             "automerge": false
         }
     ]
