--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - "**/environment.yml"
+      - "**/Dockerfile"
 
 # TODO On complete call testing CI
 # TODO Skip testing CI if any changes to environment.yml
@@ -18,38 +19,43 @@ jobs:
     runs-on: ubuntu-latest
     # Only run on Pull Requests within the same repository, and not from forks
     if: github.event.pull_request.head.repo.full_name == github.repository
-
+    outputs:
+      conda-matrix: ${{ steps.conda-diff.outputs.all_changed_files }}
+      docker-matrix: ${{ steps.docker-diff.outputs.all_changed_files }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
-      - name: Calculate file differences
-        id: diff
+      - name: Find conda differences
+        id: conda-diff
         uses: tj-actions/changed-files@4edd678ac3f81e2dc578756871e4d00c19191daf # v45
         with:
           json: true
-          quotepath: false
-          # TODO Add Dockerfiles
+          escape_json: false
           files: |
             modules/**/environment.yml
-      - name: Debug
-        run: echo ${{ steps.diff.outputs.all_changed_files }}
-      - id: set-matrix
-        run: echo "matrix={\"profile\":[\"docker\", \"singularity\"],\"files\":${{ steps.diff.outputs.all_changed_files }} }" >> "$GITHUB_OUTPUT"
+      - name: Find Dockerfile differences
+        id: docker-diff
+        uses: tj-actions/changed-files@4edd678ac3f81e2dc578756871e4d00c19191daf # v45
+        with:
+          json: true
+          escape_json: false
+          files: |
+            modules/**/Dockerfile
 
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-
-  build:
+  conda-wave:
     # NOTE This should get skipped because generate-matrix won't run
     # if: github.repository == 'nf-core/modules'
-    if: "${{ fromJson(needs.generate-matrix.outputs.matrix) }}"
+    if: "${{ fromJson(needs.generate-matrix.outputs.conda-matrix) }}"
     needs: generate-matrix
-    name: build
+    name: Build Conda-based Container
     runs-on: ubuntu-latest
     timeout-minutes: 60
     strategy:
       fail-fast: false
-      matrix: "${{ fromJson(needs.generate-matrix.outputs.matrix) }}"
+      max-parallel: 4
+      matrix:
+        files: "${{ fromJson(needs.generate-matrix.outputs.conda-matrix) }}"
+        profile: [docker, singularity]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
@@ -59,15 +65,7 @@ jobs:
           sudo mv wave-${WAVE_VER}-linux-x86_64 /usr/local/bin/wave
           chmod +x /usr/local/bin/wave
 
-      - name: Create a registry name
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
-        id: registry-name
-        with:
-          result-encoding: string
-          script: |
-            return '${{ matrix.files }}'.replace('modules/nf-core/', '').replace('/environment.yml', '').replace('/', '_');
-
-      - name: Build container
+      - name: Build Docker container
         # FIXME Hack while iron out the CI
         continue-on-error: true
         if: matrix.profile == 'docker'
@@ -90,7 +88,63 @@ jobs:
               --tower-workspace-id ${{ secrets.TOWER_WORKSPACE_ID }} \
               --singularity
 
-    # TODO Build from Dockerfiles
+  docker-wave:
+    # NOTE This should get skipped because generate-matrix won't run
+    # if: github.repository == 'nf-core/modules'
+    if: "${{ fromJson(needs.generate-matrix.outputs.docker-matrix) }}"
+    needs: generate-matrix
+    name: Build Dockerfile-based Container
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    strategy:
+      fail-fast: false
+      max-parallel: 4
+      matrix:
+        files: "${{ fromJson(needs.generate-matrix.outputs.docker-matrix) }}"
+        profile: [docker, singularity]
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+
+      - name: Install wave-cli
+        run: |
+          wget -q https://github.com/seqeralabs/wave-cli/releases/download/v${WAVE_VER}/wave-${WAVE_VER}-linux-x86_64
+          sudo mv wave-${WAVE_VER}-linux-x86_64 /usr/local/bin/wave
+          chmod +x /usr/local/bin/wave
+
+      - name: Create a registry name
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
+        id: registry-name
+        with:
+          result-encoding: string
+          script: |
+            return '${{ matrix.files }}'.replace('modules/nf-core/', '').replace('/Dockerfile', '').replace('/', '_');
+
+      - name: Build Docker container
+        # FIXME Hack while iron out the CI
+        continue-on-error: true
+        if: matrix.profile == 'docker'
+        run: |
+          wave -f "${{ matrix.files }}" \
+              --freeze \
+              --await \
+              --build-repo quay.io/nf-core/modules/${{steps.registry-name.outputs.result}} \
+              --cache-repository quay.io/nf-core/wave-cache \
+              --tower-token ${{ secrets.TOWER_ACCESS_TOKEN }} \
+              --tower-workspace-id ${{ secrets.TOWER_WORKSPACE_ID }}
+
+      - name: Build Singularity
+        # FIXME Hack while iron out the CI
+        continue-on-error: true
+        if: matrix.profile == 'singularity'
+        run: |
+          wave -f "${{ matrix.files }}" \
+              --singularity \
+              --freeze \
+              --await \
+              --build-repo quay.io/nf-core/modules/${{steps.registry-name.outputs.result}} \
+              --cache-repository quay.io/nf-core/wave-cache \
+              --tower-token ${{ secrets.TOWER_ACCESS_TOKEN }} \
+              --tower-workspace-id ${{ secrets.TOWER_WORKSPACE_ID }}
 
   # bump-versions:
   #   needs: generate-matrix
