--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -64,28 +64,18 @@ jobs:
           sudo mv wave-${WAVE_VER}-linux-x86_64 /usr/local/bin/wave
           chmod +x /usr/local/bin/wave
 
-      - name: Build Docker container
+      - name: Build ${{ matrix.profile }} container
         # FIXME Hack while iron out the CI
         continue-on-error: true
-        if: matrix.profile == 'docker'
+        env:
+          PROFILE: ${{ (contains(matrix.profile, 'singularity') && '--singularity') || '' }}
         run: |
           wave --conda-file "${{ matrix.files }}" \
+              $PROFILE \
               --freeze \
               --await \
               --tower-token ${{ secrets.TOWER_ACCESS_TOKEN }} \
               --tower-workspace-id ${{ secrets.TOWER_WORKSPACE_ID }}
-
-      - name: Build Singularity
-        # FIXME Hack while iron out the CI
-        continue-on-error: true
-        if: matrix.profile == 'singularity'
-        run: |
-          wave --conda-file "${{ matrix.files }}" \
-              --freeze \
-              --await \
-              --tower-token ${{ secrets.TOWER_ACCESS_TOKEN }} \
-              --tower-workspace-id ${{ secrets.TOWER_WORKSPACE_ID }} \
-              --singularity
 
   docker-wave:
     # NOTE This should get skipped because generate-matrix won't run
@@ -118,26 +108,14 @@ jobs:
           script: |
             return '${{ matrix.files }}'.replace('modules/nf-core/', '').replace('/Dockerfile', '').replace('/', '_');
 
-      - name: Build Docker container
+      - name: Build ${{ matrix.profile }} container
         # FIXME Hack while iron out the CI
         continue-on-error: true
-        if: matrix.profile == 'docker'
+        env:
+          PROFILE: ${{ (contains(matrix.profile, 'singularity') && '--singularity') || '' }}
         run: |
           wave -f "${{ matrix.files }}" \
-              --freeze \
-              --await \
-              --build-repo quay.io/nf-core/modules/${{steps.registry-name.outputs.result}} \
-              --cache-repository quay.io/nf-core/wave-cache \
-              --tower-token ${{ secrets.TOWER_ACCESS_TOKEN }} \
-              --tower-workspace-id ${{ secrets.TOWER_WORKSPACE_ID }}
-
-      - name: Build Singularity
-        # FIXME Hack while iron out the CI
-        continue-on-error: true
-        if: matrix.profile == 'singularity'
-        run: |
-          wave -f "${{ matrix.files }}" \
-              --singularity \
+              $PROFILE \
               --freeze \
               --await \
               --build-repo quay.io/nf-core/modules/${{steps.registry-name.outputs.result}} \
