stockholm format affected subworkflow and modules updated

--- a/modules/nf-core/hmmer/eslalimask/meta.yml
+++ b/modules/nf-core/hmmer/eslalimask/meta.yml
@@ -53,10 +53,10 @@ output:
           description: |
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
-      - "*.masked.sthlm.gz":
+      - "*.masked.sto.gz":
           type: file
           description: Masked alignment in gzipped Stockholm format
-          pattern: "*.sthlm.gz"
+          pattern: "*.sto.gz"
   - fmask_rf:
       - "*.fmask-rf.gz":
           type: file
