--- a/tests/modules/nf-core/hmmer/eslalimask/test.yml
+++ b/tests/modules/nf-core/hmmer/eslalimask/test.yml
@@ -4,7 +4,7 @@
     - hmmer
     - hmmer/eslalimask
   files:
-    - path: output/rfmask/test.masked.sthlm.gz
+    - path: output/rfmask/test.masked.sto.gz
       contains:
         - "GS CP025268.1:223601-225154 DE Escherichia coli"
         - "=GC RF"
