add working tests

--- a/modules/nf-core/parabricks/mutectcaller/tests/lowmem.config
+++ b/modules/nf-core/parabricks/mutectcaller/tests/lowmem.config
@@ -2,6 +2,7 @@ process {
 
     withName: PARABRICKS_MUTECTCALLER {
         ext.args = { "--mutect-low-memory" }
+        stageInMode = 'copy'
     }
 
 }
