--- a/modules/nf-core/parabricks/mutectcaller/tests/tn.config
+++ b/modules/nf-core/parabricks/mutectcaller/tests/tn.config
@@ -2,6 +2,7 @@ process {
 
     withName: PARABRICKS_MUTECTCALLER {
         ext.args = { "--in-normal-bam $normal_bam --normal-name $meta.normal_id --mutect-low-memory" }
+        stageInMode = 'copy'
     }
 
 }
