Corrected process name

--- a/modules/nf-core/trgt/genotype/meta.yml
+++ b/modules/nf-core/trgt/genotype/meta.yml
@@ -1,7 +1,7 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
-name: "trgt"
-description: Tandem repeat genotyping and visualization from PacBio HiFi data
+name: "trgt genotype"
+description: Tandem repeat genotyping from PacBio HiFi data
 keywords:
   - repeats
   - pacbio
