--- a/modules/nf-core/trgt/genotype/meta.yml
+++ b/modules/nf-core/trgt/genotype/meta.yml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
-name: "trgt genotype"
+name: "trgt_genotype"
 description: Tandem repeat genotyping from PacBio HiFi data
 keywords:
   - repeats
