standard prefix.clipkit output + better meta description for the alignment file

--- a/modules/nf-core/clipkit/meta.yml
+++ b/modules/nf-core/clipkit/meta.yml
@@ -24,8 +24,7 @@ input:
           e.g. `[ id:'sample1', single_end:false ]`
     - aln:
         type: file
-        description: List of multiple sequence alignments in FASTA format to be used
-          to compute the consensus
+        description: Multiple sequence alignment file in various supported formats.
         pattern: "*.{fa,fasta,fa,fna,faa,alnfaa,aln,sto,stk,mauve,alignment,clustal}"
 
 output:
