--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -30,8 +30,8 @@ profiles {
     }
     docker {
         docker.enabled = true
-        docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
-    }
+docker.runOptions       = '-u $(id -u):$(id -g) --gpus device=0 --platform=linux/amd64'    
+}
     docker_self_hosted {
         docker.enabled = true
         docker.fixOwnership = true
