--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -33,6 +33,7 @@ jobs:
           escape_json: false
           files: |
             modules/**/environment.yml
+
       - name: Find Dockerfile differences
         id: docker-diff
         uses: tj-actions/changed-files@4edd678ac3f81e2dc578756871e4d00c19191daf # v45
@@ -45,7 +46,7 @@ jobs:
   conda-wave:
     # NOTE This should get skipped because generate-matrix won't run
     # if: github.repository == 'nf-core/modules'
-    if: "${{ fromJson(needs.generate-matrix.outputs.conda-matrix) }}"
+    if: ${{ needs.generate-matrix.outputs.conda-matrix != '[]' }}
     needs: generate-matrix
     name: Build Conda-based ${{ matrix.profile }} Container
     runs-on: ubuntu-latest
@@ -81,7 +82,7 @@ jobs:
   docker-wave:
     # NOTE This should get skipped because generate-matrix won't run
     # if: github.repository == 'nf-core/modules'
-    if: "${{ fromJson(needs.generate-matrix.outputs.docker-matrix) }}"
+    if: ${{ needs.generate-matrix.outputs.docker-matrix != '[]' }}
     needs: generate-matrix
     name: Build Dockerfile-based ${{ matrix.profile }} Container
     runs-on: ubuntu-latest
