update coverage2cytosine outputs

--- a/subworkflows/nf-core/fastq_align_dedup_bismark/tests/nextflow.config
+++ b/subworkflows/nf-core/fastq_align_dedup_bismark/tests/nextflow.config
@@ -1,7 +1,9 @@
 process {
     withName: BISMARK_ALIGN {
             ext.args = { [
-                params.aligner == 'bismark_hisat' ? ' --hisat2' : ' --bowtie2',
+                params.aligner == 'bismark_hisat' ? ' --hisat2' :
+                params.aligner == 'bismark_minimap' ? ' --minimap2' :
+                params.aligner == 'bismark' ? ' --bowtie2' : '',
                 params.aligner == 'bismark_hisat' && params.known_splices ? " --known-splicesite-infile <(hisat2_extract_splice_sites.py ${known_splices})" : '',
                 params.pbat ? ' --pbat' : '',
                 ( params.single_cell || params.non_directional || params.zymo ) ? ' --non_directional' : '',
