--- a/subworkflows/nf-core/fastq_align_dedup_bismark/tests/nextflow.config
+++ b/subworkflows/nf-core/fastq_align_dedup_bismark/tests/nextflow.config
@@ -1,9 +1,7 @@
 process {
-    withName: BISMARK_ALIGN {
+    withName: 'BISMARK_ALIGN' {
             ext.args = { [
-                params.aligner == 'bismark_hisat' ? ' --hisat2' :
-                params.aligner == 'bismark_minimap' ? ' --minimap2' :
-                params.aligner == 'bismark' ? ' --bowtie2' : '',
+                params.aligner == 'bismark_hisat' ? ' --hisat2' : ' --bowtie2',
                 params.aligner == 'bismark_hisat' && params.known_splices ? " --known-splicesite-infile <(hisat2_extract_splice_sites.py ${known_splices})" : '',
                 params.pbat ? ' --pbat' : '',
                 ( params.single_cell || params.non_directional || params.zymo ) ? ' --non_directional' : '',
@@ -19,7 +17,11 @@ process {
             ].join(' ').trim() }
     }
 
-    withName: BISMARK_METHYLATIONEXTRACTOR {
+    withName: 'SAMTOOLS_SORT_DEDUPLICATED' {
+        ext.prefix = { "${meta.id}.sorted" }
+    }
+
+    withName: 'BISMARK_METHYLATIONEXTRACTOR' {
         ext.args = { [
             params.comprehensive   ? ' --comprehensive --merge_non_CpG' : '',
             params.meth_cutoff     ? " --cutoff ${params.meth_cutoff}" : '',
@@ -30,9 +32,5 @@ process {
             meta.single_end ? '' : (params.ignore_r2        > 0 ? "--ignore_r2 ${params.ignore_r2}"       : ""),
             meta.single_end ? '' : (params.ignore_3prime_r2 > 0 ? "--ignore_3prime_r2 ${params.ignore_3prime_r2}": "")
         ].join(' ').trim() }
-    }
-
-    withName: SAMTOOLS_SORT {
-        ext.prefix = { "${meta.id}.sorted" }
     }
 }
