applied suggestions from code review
Co-authored-by: Famke Bäuerle <45968370+famosab@users.noreply.github.com>

--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -33,7 +33,7 @@ profiles {
         docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
     }
     gpu {
-        docker.runOptions       = '-u $(id -u):$(id -g) --gpus device=0'
+        docker.runOptions       = '-u $(id -u):$(id -g) --gpus device=0 --platform=linux/amd64'
         apptainer.runOptions    = '--no-mount tmp --writable-tmpfs --nv'
         singularity.runOptions  = '--no-mount tmp --writable-tmpfs --nv'
         use_gpu                 = true
