added flag for low memory usage to test's nextflow config

--- a/modules/nf-core/parabricks/haplotypecaller/tests/nextflow.config
+++ b/modules/nf-core/parabricks/haplotypecaller/tests/nextflow.config
@@ -1,5 +1,5 @@
 process {
     withName: 'PARABRICKS_HAPLOTYPECALLER' {
-        ext.args = "--gvcf"
+        ext.args = "--gvcf --htvc-low-memory"
     }
 }
