--- a/modules/nf-core/muse/call/environment.yml
+++ b/modules/nf-core/muse/call/environment.yml
@@ -1,9 +1,6 @@
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 name: "muse_call"
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
-  - "bioconda::muse=1.0.rc"
+  - "bioconda::muse=2.1.2"
