added other review suggestions

--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -15,6 +15,7 @@ profiles {
     singularity {
         singularity.enabled = true
         singularity.autoMounts = true
+        singularity.runOptions = '--nv'
     }
     conda {
         conda.enabled = true
@@ -30,7 +31,7 @@ profiles {
     }
     docker {
         docker.enabled = true
-        docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
+        docker.runOptions       = '-u $(id -u):$(id -g) --gpus device=0 --platform=linux/amd64'
     }
     gpu {
         docker.runOptions       = '-u $(id -u):$(id -g) --gpus device=0 --platform=linux/amd64'
