--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -341,11 +341,15 @@ jobs:
           - profile: conda
             tags: ncbitools/vecscreen
           - profile: conda
+            tags: parabricks/applybqsr
+          - profile: conda
             tags: parabricks/dbsnp
           - profile: conda
             tags: parabricks/deepvariant
           - profile: conda
             tags: parabricks/genotypegvcf
+          - profile: conda
+            tags: parabricks/fq2bam
           - profile: conda
             tags: parabricks/indexgvcf
           - profile: conda
@@ -533,10 +537,6 @@ jobs:
           - profile: conda
             path: modules/nf-core/deepcell/mesmer
           - profile: conda
-            path: modules/nf-core/deepsomatic
-          - profile: singularity
-            path: modules/nf-core/deepsomatic
-          - profile: conda
             path: modules/nf-core/deepvariant
           - profile: conda
             path: modules/nf-core/deepvariant/callvariants
@@ -645,14 +645,23 @@ jobs:
           - profile: conda
             path: subworkflows/nf-core/deepvariant
           - profile: conda
+            path: modules/nf-core/parabricks/fq2bammeth
+          - profile: docker_self_hosted
+            path: modules/nf-core/parabricks/fq2bammeth
+          - profile: singularity
+            path: modules/nf-core/parabricks/fq2bammeth
+          - profile: conda
+            path: modules/nf-core/parabricks/fq2bam
+          - profile: docker_self_hosted
+            path: modules/nf-core/parabricks/fq2bam
+          - profile: singularity
+            path: modules/nf-core/parabricks/fq2bam
+          - profile: conda
             path: subworkflows/nf-core/fastq_align_bamcmp_bwa
           - profile: conda
             path: subworkflows/nf-core/fastq_align_bwa
           - profile: conda
             path: subworkflows/nf-core/fasta_newick_epang_gappa
-          - path: modules/nf-core/parabricks/fq2bammeth
-          - path: modules/nf-core/parabricks/fq2bam
-          - path: modules/nf-core/parabricks/applybqsr
           - path: modules/nf-core/parabricks/haplotypecaller
           - profile: conda
             path: modules/nf-core/xeniumranger/relabel
