--- a/modules/nf-core/muse/sump/meta.yml
+++ b/modules/nf-core/muse/sump/meta.yml
@@ -2,7 +2,8 @@
 name: "muse_sump"
 description: computes tier-based cutoffs from a sample-specific error model
 keywords:
-  - genomics
+  - variant calling
+  - somatic
   - wgs
   - wxs
   - vcf
