--- a/modules/nf-core/muse/sump/tests/wes.config
+++ b/modules/nf-core/muse/sump/tests/wes.config
@@ -1,4 +1,8 @@
 process {
+
     withName: 'MUSE_SUMP' {
-            ext.args   = '-E' }
+        ext.args    = '-E' 
+        stageInMode = 'copy'
+    }
+
 }
