--- a/modules/nf-core/muse/call/meta.yml
+++ b/modules/nf-core/muse/call/meta.yml
@@ -3,7 +3,8 @@ name: "muse_call"
 description: pre-filtering and calculating position-specific summary statistics using
   the Markov substitution model
 keywords:
-  - genomics
+  - variant calling
+  - somatic
   - wgs
   - wxs
   - vcf
