--- a/modules/nf-core/trgt/genotype/meta.yml
+++ b/modules/nf-core/trgt/genotype/meta.yml
@@ -3,7 +3,7 @@
 name: "trgt_genotype"
 description: Tandem repeat genotyping from PacBio HiFi data
 keywords:
-  - repeats
+  - repeat expansion
   - pacbio
   - genomics
 tools:
