--- a/modules/nf-core/trgt/plot/meta.yml
+++ b/modules/nf-core/trgt/plot/meta.yml
@@ -5,8 +5,9 @@ name: "trgt_plot"
 description: Visualize tandem repeats genotyped by TRGT
 keywords:
   - trgt
-  - repeats
+  - repeat expansion
   - plotting
+  - pacbio
   - genomics
 tools:
   - "trgt":
