add gpu profile to nf-test.config

--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -37,6 +37,12 @@ profiles {
         docker.fixOwnership = true
         docker.runOptions = '--platform=linux/amd64'
     }
+    gpu {
+        docker.runOptions       = '-u $(id -u):$(id -g) --gpus all'
+        apptainer.runOptions    = '--nv'
+        singularity.runOptions  = '--nv'
+        use_gpu                 = true
+    }
 }
 
 docker.registry = 'quay.io'
